k3s/s3-cleanup-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: s3-cleanup
  namespace: frappe-system
spec:
  restartPolicy: Never
  containers:
    - name: s3-cleanup
      image: amazon/aws-cli:latest
      command: ["/bin/sh", "-c"]
      args:
        - "aws s3 rm s3://frappe-k3s-test-backups/ --recursive --endpoint-url https://s3.eu-central-2.idrivee2.com"
