k3s/s3-verify-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: s3-verify
  namespace: frappe-system
spec:
  restartPolicy: Never
  containers:
    - name: s3-verify
      image: amazon/aws-cli:latest
      command: ["/bin/sh", "-c"]
      args:
        - "aws s3 ls s3://frappe-k3s-test-backups/test.local/ --endpoint-url https://s3.eu-central-2.idrivee2.com"
