k3s/bench-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bench-test
  namespace: frappe-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`k8s-test.local`)
      kind: Rule
      services:
        - name: bench-test
          port: 8000
